deps/v8/test/message/fail/class-field-static-prototype.out
*%(basename)s:6: SyntaxError: Classes may not have a static property named 'prototype'
  static prototype = function() {};
         ^^^^^^^^^
SyntaxError: Classes may not have a static property named 'prototype'